--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,7 @@
 body {
-    background: #000;
+     /* фон с градиентом */
+  background-position: 0 0;
+  background-repeat: repeat;
+  height: 100vh;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.45), rgba(255, 255, 255, 0.05), rgba(0, 0, 0, 0.45)), url(./images/pattern.png);
 }
